# robots_gui_system_settings

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
headers/: style_sheet.h
resources/fonts/: rom_fonts.qrc
resources/icons/: icons.qrc  rom_icons.qrc
